# Xdiff

./: Cargo.toml  README.md  config.yaml  new.md  temp
examples/: config.rs  similar.rs  tty.rs
fixtures/: test.yml  xdiff.yml  xreq.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
tests/cmd/: xdiff_run_failed.mds  xdiff_run_with_params.md
